--- a/service/service-search/pom.xml
+++ b/service/service-search/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.atguigu.tingshu</groupId>
             <artifactId>kafka-util</artifactId>
             <version>1.0</version>
